# tennis-booking

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/agents/: api-researcher.md
.github/workflows/: ci.yml  deploy.yml
config/: profiles.example.yaml  schedule.example.yaml
deploy/: setup-server.sh  tennis-booking.service  tennis-booking.sudoers
docs/: DEPLOYMENT.md  PLAN.md  PROGRESS.md  api-research.md  architecture.md  research-template.md
src/tennis_booking/: __main__.py
tests/: conftest.py  test_main.py  test_main_min_lead.py  test_main_persistence.py  test_main_telegram.py  test_smoke.py
tests/altegio/: test_client.py  test_client_cancel_booking.py  test_client_search_staff.py  test_client_search_timeslots.py  test_cloudflare_challenge.py  test_config.py  test_extract_business_error_new_shape.py  test_models.py
tests/config/: test_grace_polling_schema.py  test_loader.py  test_loader_court_pool.py  test_loader_dedup_pools.py  test_loader_grace_polling.py  test_loader_poll.py  test_min_lead_schema.py  test_poll_schema.py  test_schema.py  test_schema_court_pool.py
tests/engine/: conftest.py  test_attempt.py  test_attempt_backoff.py  test_attempt_cancel_duplicates.py  test_attempt_cloudflare.py  test_attempt_court_pool.py  test_attempt_grace_polling.py  test_attempt_max_parallel_shots.py  test_attempt_min_lead_time.py  test_attempt_persistence.py  test_attempt_telegram.py  test_clock.py  test_grace_polling_min_lead.py  test_poll_attempt.py  test_poll_attempt_atomic_search.py  test_poll_attempt_cache.py  (+5 more)
(+51 files in other folders)
