[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tennis-booking"
version = "0.1.0"
description = "Автобронирование слотов на корты клуба Daulet через Altegio API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Roman" }]
dependencies = [
    "httpx[http2]>=0.27",
    "pydantic>=2",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tennis_booking"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: slow tests hitting real NTP server (skip by default)"]
addopts = "-m 'not integration'"
